[package]
name = "versionfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.11.0"
log = "0.4.17"
env_logger = "0.9.0"
clap = { version = "3.2.5", features = ["cargo"] }
libc = "0.2.126"
ctrlc = { version = "3.2.2", features = ["termination"] }
